--- a/charlie.css
+++ b/charlie.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Convergence&display=swap');
-
-
+@font-face {
+    font-family: CPfont;
+    src: url(../../icomoon.ttf)
+}
 body{
     font-family: 'Convergence', sans-serif;
     font-weight: 700;
@@ -23,21 +25,26 @@ body{
     border: none;
     outline: none;
     color: rgb(255, 255, 255);
-    background: #111;
+    background: #101010;
     cursor: pointer;
     position: relative;
     z-index: 0;
-    border-radius: 10px;
+    border-radius: 8px;
   }
   
-  .getitnow:before {
+  .getitnow::before {
     content: "";
     background: linear-gradient(
       45deg,
-
-      white,gray,white,
-      gray,white,
-      rgb(185, 185, 185)
+      #ff0000,
+      #ff7300,
+      #590600,
+      #ff0000,
+      #f98b05,
+      #dd7e09,
+      #ff3300,
+      #590600,
+      rgb(215, 83, 12)
       /* #ff0000,
       #ff7300,
       #fffb00,
@@ -75,7 +82,7 @@ body{
   }
   
   .getitnow:active {
-    color: #000;
+    color: #000000;
   }
   
   .getitnow:active:after {
@@ -92,7 +99,8 @@ body{
     position: absolute;
     width: 100%;
     height: 100%;
-    background: #191919;
+    /* background: #191919; */
+    background-image: url("images/lipstick-art.jfif");
     left: 0;
     top: 0;
     border-radius: 10px;
