--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2304,7 +2304,7 @@ header .icon.circled {
 
 #header {
 	position: relative;
-	background-image: url("../../images/tnhtw.webp");
+	background-image: url("../../images/lipstick-bg.gif");
 	background-size: cover;
 	background-position: center center;
 	background-attachment: fixed;
@@ -3070,7 +3070,7 @@ body.homepage.is-preload #header:after {
 		top: 0;
 		width: 100%;
 		height: 100%;
-		background: url("images/overlay.png");
+		background: url("images/lipstick-art.jfif");
 		/* background-size: 128px 128px; */
 		background-size: cover;
 		background-repeat: no-repeat;
