--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2304,7 +2304,7 @@ header .icon.circled {
 
 #header {
 	position: relative;
-	background-image: url("../../images/lipstick-bg.gif");
+	background-image: url("../../images/heroMR_CHARLIE-16@2x.jpg");
 	background-size: cover;
 	background-position: center center;
 	background-attachment: fixed;
