--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3070,7 +3070,7 @@ body.homepage.is-preload #header:after {
 		top: 0;
 		width: 100%;
 		height: 100%;
-		background: url("images/lipstick-art.jfif");
+		background: url("images/heroMR_CHARLIE-16@2x.jpg");
 		/* background-size: 128px 128px; */
 		background-size: cover;
 		background-repeat: no-repeat;
